FF z-index fix

--- a/src/styles/selector.less
+++ b/src/styles/selector.less
@@ -5,7 +5,7 @@ iframe#adguard-assistant-dialog {
     clip: auto;
     border-radius: 3px;
     box-shadow: 0 0 10px 3px rgba(162, 161, 161, .3);
-    z-index: 99999999;
+    z-index: 2147483646;
 }
 
 .sg_hide_element {
